docker/kubernetes-deployments/azure/broker.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cloud-broker-cluster
  namespace: default
spec:
  selector:
    matchLabels:
      app: cloud-broker-cluster
  replicas: 3
  podManagementPolicy: Parallel
  serviceName: cloud-broker-internal
  template:
    metadata:
      labels:
        app: cloud-broker-cluster
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: broker-cluster
        image: "582161142462.dkr.ecr.us-west-2.amazonaws.com/broker-scala-performance:latest"
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /health
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        ports:
        - containerPort: 9000
        - containerPort: 9005
        - containerPort: 2551
        - containerPort: 8558
        - containerPort: 9443
        resources:
          requests:
            memory: "1Gi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "300m"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-broker-cluster-squad
  namespace: default
spec:
  selector:
    matchLabels:
      app: cloud-broker-cluster
  replicas: 1
  template:
    metadata:
      labels:
        app: cloud-broker-cluster
        depl_type: squad
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
      - name: broker-cluster-squad
        image: "582161142462.dkr.ecr.us-west-2.amazonaws.com/broker-scala-performance:latest"
        imagePullPolicy: Always

        livenessProbe:
          httpGet:
            path: /health
            port: 9000
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        ports:
        - containerPort: 9000
        - containerPort: 9005
        - containerPort: 2551
        - containerPort: 8558
        - containerPort: 9443
        resources:
          requests:
            memory: "1Gi"
            cpu: "100m"
          limits:
            memory: "1Gi"
            cpu: "300m"
---
apiVersion: v1
kind: Service
metadata:
  name: cloud-broker-internal
  labels:
    app: cloud-broker-cluster
spec:
  ports:
  - port: 2551
    targetPort: 2551
    protocol: TCP
  selector:
    app: cloud-broker-cluster
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: cloud-broker-external
  labels:
    app: cloud-broker-cluster
spec:
  ports:
  - name: dsabroker-webinterface
    port: 9000
    targetPort: 9000
  - name: dsa-9005
    port: 9005
    targetPort: 9005
  selector:
    app: cloud-broker-cluster
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: cloud-broker-external-lb
#   labels:
#     app: cloud-broker-cluster
# spec:
#   ports:
#   - name: dsabroker-webinterface
#     port: 9000
#     targetPort: 9000
#   - name: dsa-9005
#     port: 9005
#     targetPort: 9005
#   type: LoadBalancer
#   selector:
#     app: cloud-broker-cluster
