docker/kubernetes-deployments/azure/cassandra.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cassandra
  labels:
    app: cassandra
spec:
  serviceName: cassandra-internal
  replicas: 3
  selector:
    matchLabels:
      app: cassandra
  template:
    metadata:
      labels:
        app: cassandra
    spec:
      terminationGracePeriodSeconds: 1800
      containers:
      - name: cassandra
        image: gcr.io/google-samples/cassandra:v13
        imagePullPolicy: Always
        ports:
        - containerPort: 7000
          name: intra-node
        - containerPort: 7001
          name: tls-intra-node
        - containerPort: 7199
          name: jmx
        - containerPort: 9042
          name: cql
        resources:
          limits:
            cpu: "500m"
            memory: 1Gi
          requests:
            cpu: "500m"
            memory: 1Gi
        securityContext:
          capabilities:
            add:
              - IPC_LOCK
        lifecycle:
          preStop:
            exec:
              command:
              - /bin/sh
              - -c
              - nodetool drain
        readinessProbe:
          exec:
            command:
            - /bin/bash
            - -c
            - /ready-probe.sh
          initialDelaySeconds: 15
          timeoutSeconds: 5
        volumeMounts:
        - name: cassandra-data
          mountPath: "/cassandra_data"
  volumeClaimTemplates:
  - metadata:
      name: cassandra-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: cassandra-internal
  labels:
    app: cassandra
spec:
  ports:
  - name: intra-node
    port: 7000
    targetPort: 7000
    protocol: TCP
  - name: tls-intra-node
    port: 7001
    targetPort: 7001
    protocol: TCP
  - name: jmx
    port: 7199
    targetPort: 7199
    protocol: TCP
  - name: cql
    port: 9042
    targetPort: 9042
    protocol: TCP
  selector:
    app: cassandra
  clusterIP: None

---
apiVersion: v1
kind: Service
metadata:
  name: cassandra
  labels:
    app: cassandra
spec:
  ports:
  - name: intra-node
    port: 7000
    targetPort: 7000
    protocol: TCP
  - name: tls-intra-node
    port: 7001
    targetPort: 7001
    protocol: TCP
  - name: jmx
    port: 7199
    targetPort: 7199
    protocol: TCP
  - name: cql
    port: 9042
    targetPort: 9042
    protocol: TCP
  selector:
    app: cassandra
