docker/kubernetes-deployments/azure/spinnaker-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spin
  namespace: spinnaker
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: spin.75bfb05a4fb5495ca754.eastus.aksapp.io
    http:
      paths:
      - backend:
          serviceName: spin-deck
          servicePort: 9000
        path: /
  - host: spin-api.75bfb05a4fb5495ca754.eastus.aksapp.io
    http:
      paths:
      - backend:
          serviceName: spin-gate
          servicePort: 8084
        path: /

# export CONTEXT=dev-aks-it2
# kubectl apply --context $CONTEXT \
#     -f https://spinnaker.io/downloads/kubernetes/service-account.yml

# export TOKEN=$(kubectl get secret --context $CONTEXT \
#    $(kubectl get serviceaccount spinnaker-service-account \
#        --context $CONTEXT \
#        -n spinnaker \
#        -o jsonpath='{.secrets[0].name}') \
#    -n spinnaker \
#    -o jsonpath='{.data.token}' | base64 --decode)

# kubectl config set-credentials ${CONTEXT}-token-user --token $TOKEN

# kubectl config set-context $CONTEXT --user ${CONTEXT}-token-user
# hal config provider kubernetes account edit my-k8s-v2-account \
#     --provider-version v2 \
#     --context $(kubectl config current-context)
